Initialized tree scroll-related information to NULL on startup to avoid crash on startup. https://bugzilla.gnome.org/show_bug.cgi?id=700305